# mfs

./: .gitignore  README.md  ngrok_deploy.py  notes.md  playground.ipynb  pyproject.toml  roadmap.md  temp.py
mfs/: front_main.py
mfs/backend/: crud.py  database.py  dependencies.py  emailsender.py  main.py  models.py  schemas.py
mfs/backend/factories/: emailsenderfactory.py
mfs/backend/routers/: items.py  usergroups.py  users.py
mfs/core/ableton/: abletonlivesetparser.py  abletonlivesetreader.py  models.py
mfs/front_components/: groupchat.py  maps.py  userauthenticator.py  usermenu.py  utils.py
mfs/front_components/factories/: userauthenticatorfactory.py  usermenufactory.py
tests/: test_mfs.py
tests/core/ableton/: test_ableton.py
tests/fixtures/: conftest.py
tests/fixtures/test Project/: test.als
tests/fixtures/test Project/Backup/: test [2023-04-14 202435].als  test [2023-04-14 202855].als  test [2023-04-14 204657].als  test [2023-04-14 204733].als
tests/fixtures/test Project/Samples/Imported/: Agogo Atabaques 112 bpm.wav.asd  Banjo Arpeggio E Minor 100 bpm.wav.asd  Bass Guitar Feel.wav.asd
tests/fixtures/test Project/Samples/Recorded/: 1-Audio 0001 [2023-04-14 182003].wav.asd
